fix: Adjust subtitles on mobiles

--- a/css/custom.css
+++ b/css/custom.css
@@ -104,17 +104,18 @@ span.skills:hover h3:before {
 }
 #position-subtitle {
   display: flex;
-  justify-content: space-between;
-  width: 90%;
-}
-.position-title-left {
-  text-align: right;
-}
-.position-title-right {
-  text-align: left;
+  flex-direction: column;
+  align-items: center;
 }
 .position-title {
   width: 168px;
+}
+.position-title-left {
+  /* overriding bootstrap's !important */
+  margin-bottom: 10px!important;
+}
+.position-title-right {
+  margin-top: 10px;
 }
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
@@ -122,7 +123,18 @@ span.skills:hover h3:before {
     width: 300px;
   }
   #position-subtitle {
-    width: 700px;
+    width: 750px;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: normal;
+  }
+  .position-title-left {
+    text-align: right;
+    margin: 0;
+  }
+  .position-title-right {
+    text-align: left;
+    margin: 0;
   }
 }
 .portfolio-row {
